deploy/aliyun/k8s/templates/albconfig.template.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: zora-alb
spec:
  controller: ingress.k8s.alibabacloud/alb
  parameters:
    apiGroup: alibabacloud.com
    kind: AlbConfig
    name: zora-alb
